2000-10-19  Takanori Saneto  <sanewo@ba2.so-net.ne.jp>

	* pgg-pgp.el (pgg-pgp-process-region): bind process-environment
	locally so that setenv's effect won't last forever.
	pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

2000-09-13   Daiki Ueno  <ueno@unixuser.org>

	* mime-play.el (mime-play-entity): Pass easymenu-style menu to
	`mime-popup-menu-select'.

	* semi-def.el (mime-popup-menu-popup): Rename from `mime-menu-popup'.
	(mime-popup-menu-select): Rename from `select-menu-alist'.
	(mime-popup-menu-select) [XEmacs]: Use `get-popup-menu-response'.
	(mime-popup-menu-bogus-filter-constructor): Abolish argument `name'.

2000-09-13   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (mime-view-xemacs-popup-menu): Abolish.
	(mime-view-menu-title): Abolish.
	(mime-view-menu-list): Rewrite in easymenu-style.
	(mime-view-popup-menu): New function.
	(mime-view-define-keymap): Simplify; don't check `emacs-major-version'.

	* semi-def.el (mime-menu-bogus-filter-constructor): New macro.
	(mime-menu-popup): New macro.
	(select-menu-alist): Rewrite with `defun-maybe-cond'.
	(mime-insert-button): Use `widget-convert-button'.
	(mime-url-link): New widget.

2000-09-12   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (widget-keymap): Declare.
	(mime-view-maybe-inherit-widget-keymap): New function.
	(mime-view-define-keymap-hook): Add
	`mime-view-maybe-inherit-widget-keymap'.

	* semi-def.el: Add setting for `widget-convert-button' to
	autoload "wid-edit".
	(mime-button-mother-dispatcher): Abolish.
	(mime-button-dispatcher): Abolish.
	(mime-add-button): Abolish.
	(mime-button-action): New function.
	(mime-button): New widget.
	(mime-add-url-buttons): Rewrite with `url-link' widget.
	(mime-button-face): Abolish.
	(mime-button-mouse-face): Abolish.

2000-08-28   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (mime-display-entity): Call `mime-add-url-buttons'.

2000-08-22   Daiki Ueno  <ueno@unixuser.org>

	* SEMI-ELS: Compile `mime-vcard' only when vcard.el is available.
